--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cool Cats Form Submission"
+      content="Partner with Cool Cats - Apply here!"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Cool Cats Form Submission</title>
+    <title>Cool Cats Partnerships</title>
 
     <script type="text/javascript">
       (function(l) {
